--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ layout: default
 			<li><a href="https://github.com/vsenna">Github</a></li>
 			<li><a href="https://linkedin.com/in/viniciussenna">LinkedIn</a></li>
 			<li><a href="https://www.hackerrank.com/senna_vinicius?hr_r=1">HackerRank</a></li>
+			<li><a href="https://pt.stackoverflow.com/users/4446/vinicius-senna">Stack Overflow</a></li>
+			<li><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4442257T4">Lattes</a></li>
 		</ul>
 	</section>
 </div>
